fix types